style(api): 修改部分api的格式
