# common/request/user.go
@@ -1,17 +1,17 @@
 package request
 
 type RegisterRequest struct {
-	Username string `json:"username" example:"用户名"`
-	Password string `json:"password" example:"密码"`
+	Username string `json:"username" form:"username"`
+	Password string `json:"password" form:"password"`
 }
 
 type LoginRequest struct {
-	Username string `json:"username" example:"用户名"`
-	Password string `json:"password" example:"密码"`
+	Username string `json:"username" form:"username"`
+	Password string `json:"password" form:"password"`
 }
 
 type ChangePasswordRequest struct {
 	ID          uint   `json:"-"`
-	Password    string `json:"password"`
-	NewPassword string `json:"newPassword"`
+	Password    string `json:"password" form:"password"`
+	NewPassword string `json:"newPassword" form:"newPassword"`
 }
